--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/api/path*",
-      "destination": "https://login.xsolla.com/api/path*"
+      "source": "/api/:path*",
+      "destination": "https://login.xsolla.com/api/:path*"
     }
   ]
 }
