--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,4 @@
 
 # Drizzle
 DATABASE_URL="postgresql://postgres:password@localhost:5432/stkb"
-
-# Example:
-# SERVERVAR="foo"
-# NEXT_PUBLIC_CLIENTVAR="bar"
+NEXT_PUBLIC_ST_CLIENT_ID=""
