--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,5 @@
 # should be updated accordingly.
 
 # Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/stkb"
+POSTGRES_URL="postgresql://postgres:password@localhost:5432/stkb"
 NEXT_PUBLIC_ST_CLIENT_ID=""
