--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vercel/postgres": "^0.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "csv-parse": "^5.5.6",
     "drizzle-orm": "^0.30.10",
     "framer-motion": "^11.2.12",
     "geist": "^1.3.0",
@@ -70,6 +71,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.4",
+    "tsx": "^4.16.0",
     "typescript": "^5.5.2"
   },
   "ct3aMetadata": {
