initial market table

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,8 @@
 
 # Drizzle
 POSTGRES_URL="postgresql://postgres:password@localhost:5432/stkb"
+
+SESSION_SECRET=""
+FLAGS_SECRET=""
+
 NEXT_PUBLIC_ST_CLIENT_ID=""
