--- a/package.json
+++ b/package.json
@@ -14,40 +14,46 @@
     "start": "next start"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.6.0",
+    "@hookform/resolvers": "^3.7.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.48.0",
-    "@tanstack/react-query-devtools": "^5.48.0",
-    "@tanstack/react-query-next-experimental": "^5.48.0",
-    "@tsparticles/engine": "^3.4.0",
+    "@tanstack/react-query": "^5.49.2",
+    "@tanstack/react-query-devtools": "^5.49.2",
+    "@tanstack/react-query-next-experimental": "^5.49.2",
+    "@tanstack/react-table": "^8.19.2",
+    "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.4.0",
+    "@tsparticles/slim": "^3.5.0",
+    "@vercel/blob": "^0.23.4",
+    "@vercel/flags": "^2.6.0",
     "@vercel/postgres": "^0.9.0",
+    "@vercel/toolbar": "^0.1.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "csv-parse": "^5.5.6",
-    "drizzle-orm": "^0.30.10",
+    "drizzle-orm": "^0.31.2",
     "framer-motion": "^11.2.12",
     "geist": "^1.3.0",
     "input-otp": "^1.2.4",
     "iron-session": "^8.0.2",
-    "lucide-react": "^0.399.0",
+    "lucide-react": "^0.400.0",
     "next": "^14.2.4",
     "next-themes": "^0.3.0",
     "partysocket": "^1.0.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.0",
+    "react-hook-form": "^7.52.1",
     "react-icon-cloud": "^4.1.4",
     "react-intersection-observer": "^9.10.3",
     "sharp": "^0.33.4",
@@ -58,21 +64,21 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.8",
+    "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
-    "drizzle-kit": "^0.21.4",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "drizzle-kit": "^0.22.8",
+    "eslint": "^9.6.0",
     "eslint-config-next": "^14.2.4",
     "eslint-plugin-drizzle": "^0.2.3",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.39",
     "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
-    "tsx": "^4.16.0",
-    "typescript": "^5.5.2"
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.1-rc"
   },
   "ct3aMetadata": {
     "initVersion": "7.34.0"
