--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev",
+    "dev": "next dev --turbo --experimental-https",
     "lint": "next lint",
     "start": "next start"
   },
