--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
+    "autoprefixer": "^10.4.19",
     "drizzle-kit": "^0.22.8",
     "eslint": "^9.6.0",
     "eslint-config-next": "^14.2.4",
