--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev --turbo --experimental-https",
+    "dev": "next dev --turbo",
     "lint": "next lint",
     "start": "next start"
   },
@@ -36,14 +36,18 @@
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
+    "@upstash/ratelimit": "^1.2.1",
+    "@upstash/redis": "^1.32.0",
     "@vercel/blob": "^0.23.4",
     "@vercel/flags": "^2.6.0",
+    "@vercel/kv": "^2.0.0",
     "@vercel/postgres": "^0.9.0",
     "@vercel/toolbar": "^0.1.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "csv-parse": "^5.5.6",
+    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.31.2",
     "framer-motion": "^11.2.12",
     "geist": "^1.3.0",
