--- a/package.json
+++ b/package.json
@@ -33,16 +33,15 @@
     "@tanstack/react-query-devtools": "^5.49.2",
     "@tanstack/react-query-next-experimental": "^5.49.2",
     "@tanstack/react-table": "^8.19.2",
+    "@tanstack/react-virtual": "^3.8.1",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "@upstash/ratelimit": "^1.2.1",
     "@upstash/redis": "^1.32.0",
     "@vercel/blob": "^0.23.4",
-    "@vercel/flags": "^2.6.0",
     "@vercel/kv": "^2.0.0",
     "@vercel/postgres": "^0.9.0",
-    "@vercel/toolbar": "^0.1.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -53,7 +52,9 @@
     "geist": "^1.3.0",
     "input-otp": "^1.2.4",
     "iron-session": "^8.0.2",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.400.0",
+    "lz-string": "^1.5.0",
     "next": "^14.2.4",
     "next-themes": "^0.3.0",
     "partysocket": "^1.0.1",
