--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
+    "@types/react-timeago": "^4.1.7",
     "@upstash/ratelimit": "^1.2.1",
     "@upstash/redis": "^1.32.0",
     "@vercel/blob": "^0.23.4",
@@ -64,6 +65,7 @@
     "react-hook-form": "^7.52.1",
     "react-icon-cloud": "^4.1.4",
     "react-intersection-observer": "^9.10.3",
+    "react-timeago": "^7.2.0",
     "sharp": "^0.33.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
