--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.7.0",
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -29,11 +29,11 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.49.2",
-    "@tanstack/react-query-devtools": "^5.49.2",
-    "@tanstack/react-query-next-experimental": "^5.49.2",
+    "@tanstack/react-query": "^5.50.1",
+    "@tanstack/react-query-devtools": "^5.50.1",
+    "@tanstack/react-query-next-experimental": "^5.50.1",
     "@tanstack/react-table": "^8.19.2",
-    "@tanstack/react-virtual": "^3.8.1",
+    "@tanstack/react-virtual": "^3.8.2",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
@@ -48,9 +48,9 @@
     "cmdk": "^1.0.0",
     "csv-parse": "^5.5.6",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.31.2",
-    "framer-motion": "^11.2.12",
-    "geist": "^1.3.0",
+    "drizzle-orm": "^0.31.4",
+    "framer-motion": "^11.2.14",
+    "geist": "^1.3.1",
     "input-otp": "^1.2.4",
     "iron-session": "^8.0.2",
     "localforage": "^1.10.0",
@@ -68,7 +68,7 @@
     "react-timeago": "^7.2.0",
     "sharp": "^0.33.4",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "vaul": "^0.9.1",
@@ -76,14 +76,14 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
     "autoprefixer": "^10.4.19",
     "drizzle-kit": "^0.22.8",
-    "eslint": "^9.6.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.4.39",
@@ -91,7 +91,7 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "tsx": "^4.16.2",
-    "typescript": "^5.5.1-rc"
+    "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.34.0"
