--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
   },
@@ -65,7 +65,9 @@
     "react-hook-form": "^7.52.1",
     "react-icon-cloud": "^4.1.4",
     "react-intersection-observer": "^9.10.3",
+    "react-markdown": "^9.0.1",
     "react-timeago": "^7.2.0",
+    "remark-gfm": "^4.0.0",
     "sharp": "^0.33.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
@@ -75,6 +77,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
