--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "next-themes": "^0.3.0",
     "partysocket": "^1.0.1",
     "postgres": "^3.4.4",
+    "raw-loader": "^4.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
