--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,18 +31,13 @@ jobs:
           commit_message: Update CHANGELOG
           file_pattern: CHANGELOG.md
 
-      - name: Commit updated CHANGELOG
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          branch: main
-          commit_message: Update CHANGELOG
-          file_pattern: CHANGELOG.md
-
   deploy-production:
     needs: update-changelog
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: steps.auto-commit-action.outputs.commit_hash
       - uses: oven-sh/setup-bun@v2
       - name: Install Vercel CLI
         run: bun install -g vercel@latest
