--- a/package.json
+++ b/package.json
@@ -56,13 +56,13 @@
     "localforage": "^1.10.0",
     "lucide-react": "^0.400.0",
     "lz-string": "^1.5.0",
-    "next": "^14.2.4",
+    "next": "^15.0.0-rc.0",
     "next-themes": "^0.3.0",
     "partysocket": "^1.0.1",
     "postgres": "^3.4.4",
     "raw-loader": "^4.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0-rc-01172397-20240716",
+    "react-dom": "^19.0.0-rc-01172397-20240716",
     "react-hook-form": "^7.52.1",
     "react-icon-cloud": "^4.1.4",
     "react-intersection-observer": "^9.10.3",
