--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@vercel/blob": "^0.23.4",
     "@vercel/kv": "^2.0.0",
     "@vercel/postgres": "^0.9.0",
+    "babel-plugin-react-compiler": "^0.0.0-experimental-696af53-20240625",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
